--- a/packages/dnb-eufemia/src/style/core/utilities.scss
+++ b/packages/dnb-eufemia/src/style/core/utilities.scss
@@ -377,22 +377,18 @@ $breakpoint-offset: 0;
   }
 }
 
-@mixin fieldsetReset($checkSpaceProps: false) {
-  @if $checkSpaceProps {
-    &:not([class*='space__top']) {
-      margin-top: 0;
-    }
-    &:not([class*='space__right']) {
-      margin-right: 0;
-    }
-    &:not([class*='space__bottom']) {
-      margin-bottom: 0;
-    }
-    &:not([class*='space__left']) {
-      margin-left: 0;
-    }
-  } @else {
-    margin: 0;
+@mixin fieldsetReset() {
+  &:not([class*='space__top']) {
+    margin-top: 0;
+  }
+  &:not([class*='space__right']) {
+    margin-right: 0;
+  }
+  &:not([class*='space__bottom']) {
+    margin-bottom: 0;
+  }
+  &:not([class*='space__left']) {
+    margin-left: 0;
   }
   padding: 0;
   border: none;
